--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container _container">
-				<div class="header__logo">Relvise</div>
+				<a href="" class="header__logo">Relvise</a>
 				<nav class="header__menu menu">
 					<ul class="menu__list">
 						<li class="menu__item"><a href="#" class="menu__link">Home</a></li>
@@ -27,11 +27,30 @@
 		</header>
 
 		<main class="page">
-
+			<section class="page__main-block main-block">
+				<div class="main-block__container _container">
+					<div class="main-block__body">
+						<h1 class="main-block__title">Finance and Consultancy Solution
+						</h1>
+						<p class="main-block__text">
+							We know how large objects will act, but things on a small scale.
+						</p>
+						<div class="main-block__buttons">
+							<a href="#" class="main-block__button">Get Quote Now</a>
+							<a href="#" class="main-block__button">Learn More</a>
+						</div>
+					</div>
+					<div class="main-block__image _ibg">
+						<img src="img/main-block/background.jpg" alt="Relvise background">
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
-
+			<div class="footer__container _container">
+				Подвал
+			</div>
 		</footer>
 	</div>
 </body>
