--- a/index.html
+++ b/index.html
@@ -36,12 +36,51 @@
 							We know how large objects will act, but things on a small scale.
 						</p>
 						<div class="main-block__buttons">
-							<a href="#" class="main-block__button">Get Quote Now</a>
-							<a href="#" class="main-block__button">Learn More</a>
+							<a href="#" class="main-block__button main-block__button_orange">Get Quote Now</a>
+							<a href="#" class="main-block__button main-block__button_border">Learn More</a>
 						</div>
 					</div>
 					<div class="main-block__image _ibg">
 						<img src="img/main-block/background.jpg" alt="Relvise background">
+					</div>
+				</div>
+			</section>
+
+			<section class="page__services services">
+				<div class="services__container _container">
+					<div class="services__body">
+						<div class="services__column">
+							<div class="services__item item-services">
+								<div class="item-services__icon">
+									<img src="img/services/1.svg" alt="Environmental 
+										Consulting">
+								</div>
+								<h3 class="item-services__title"><a href="#">Environmental Consulting</a></h3>
+								<p class="item-services__text">We focus on ergonomics and meeting you where you work.</p>
+							</div>
+						</div>
+
+						<div class="services__column">
+							<div class="services__item item-services">
+								<div class="item-services__icon">
+									<img src="img/services/2.svg" alt="Finance and 
+									consultancy ">
+								</div>
+								<h3 class="item-services__title"><a href="#">Finance and consultancy </a></h3>
+								<p class="item-services__text">Just type what's on your mind and we'll get you there.</p>
+							</div>
+						</div>
+
+						<div class="services__column">
+							<div class="services__item item-services">
+								<div class="item-services__icon">
+									<img src="img/services/3.svg" alt="Financial Services 
+									Consulting">
+								</div>
+								<h3 class="item-services__title"><a href="#">Financial Services Consulting</a></h3>
+								<p class="item-services__text">the quick fox jumps over the lazy dog</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
