add advantages block

--- a/index.html
+++ b/index.html
@@ -107,6 +107,55 @@
 				</div>
 			</section>
 
+			<section class="page__advantages advantages">
+				<div class="advantages__container _container">
+					<div class="advantages__title-block title-block">
+						<h2 class="title-block__title">Designing Better Experience</h2>
+						<p class="title-block__subtitle">Problems trying to resolve the conflict between the two major realms
+							<br> of Classical physics: Newtonian mechanics
+						</p>
+					</div>
+					<div class="advantages__body">
+						<div class="advantages__column">
+							<div class="advantages__item item-advantages">
+								<div class="item-advantages__icon">
+									<img src="img/advantages/1.svg" alt="Consumer Products">
+								</div>
+								<div class="item-advantages__number">972 +</div>
+								<p class="item-advantages__text">Consumer Products</p>
+							</div>
+						</div>
+						<div class="advantages__column">
+							<div class="advantages__item item-advantages">
+								<div class="item-advantages__icon">
+									<img src="img/advantages/2.svg" alt="Financial Services">
+								</div>
+								<div class="item-advantages__number">181 +</div>
+								<p class="item-advantages__text">Financial Services </p>
+							</div>
+						</div>
+						<div class="advantages__column">
+							<div class="advantages__item item-advantages">
+								<div class="item-advantages__icon">
+									<img src="img/advantages/3.svg" alt="Environmental">
+								</div>
+								<div class="item-advantages__number">98%</div>
+								<p class="item-advantages__text">Environmental</p>
+							</div>
+						</div>
+						<div class="advantages__column">
+							<div class="advantages__item item-advantages">
+								<div class="item-advantages__icon">
+									<img src="img/advantages/4.svg" alt="Business & Finance ">
+								</div>
+								<div class="item-advantages__number">746 +</div>
+								<p class="item-advantages__text">Business & Finance</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 
 		<footer class="footer">
