add whoweare block

--- a/index.html
+++ b/index.html
@@ -228,6 +228,42 @@
 				</div>
 			</section>
 
+			<section class="page__whoweare whoweare">
+				<div class="whoweare__container _container">
+					<div class="whoweare__title-block title-block">
+						<h2 class="title-block__title">Who We Are</h2>
+						<p class="title-block__subtitle">Problems trying to resolve the conflict between the two major realms
+							<br> of Classical physics: Newtonian mechanics
+						</p>
+					</div>
+					<div class="whoweare__body">
+						<div class="whoweare__video">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/7qBfdcI-d1Q"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</div>
+						<div class="whoweare__content">
+							<div class="whoweare__top">
+								<h2 class="whoweare__title">Most trusted in our field</h2>
+								<p class="whoweare__text">Most calendars are designed for teams. Slate is designed for
+									freelancers who want a simple way to plan their schedule.</p>
+							</div>
+							<ul class="whoweare__items">
+								<li class="whoweare__item item-whoweare item-whoweare_1">
+									<p class="item-whoweare__title">the quick fox jumps over the lazy dog</p>
+									<p class="item-whoweare__text">Things on a very small scale ...</p>
+								</li>
+								<li class="whoweare__item item-whoweare item-whoweare_2">
+									<p class="item-whoweare__title">the quick fox jumps over the lazy dog</p>
+									<p class="item-whoweare__text">Things on a very small scale ...</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 
 		<footer class="footer">
