add partners block

--- a/index.html
+++ b/index.html
@@ -264,6 +264,29 @@
 				</div>
 			</section>
 
+			<div class="page__partners partners">
+				<div class="partners__container _container">
+					<div class="partners__item">
+						<img src="img/partners/Vector-0.svg" alt="partner">
+					</div>
+					<div class="partners__item">
+						<img src="img/partners/Vector-1.svg" alt="partner">
+					</div>
+					<div class="partners__item">
+						<img src="img/partners/Vector-2.svg" alt="partner">
+					</div>
+					<div class="partners__item">
+						<img src="img/partners/Vector-3.svg" alt="partner">
+					</div>
+					<div class="partners__item">
+						<img src="img/partners/Vector-4.svg" alt="partner">
+					</div>
+					<div class="partners__item">
+						<img src="img/partners/Vector-5.svg" alt="partner">
+					</div>
+				</div>
+			</div>
+
 		</main>
 
 		<footer class="footer">
