--- a/index.html
+++ b/index.html
@@ -287,6 +287,18 @@
 				</div>
 			</div>
 
+			<div class="page__subscribe subscribe">
+				<div class="subscribe__container _container">
+					<div class="subscribe__body">
+						<h4 class="subscribe__title">Subscribe For Latest Newsletter</h4>
+						<form action="" class="subscribe__form" method="GET">
+							<input type="email" class="subscribe__input" placeholder="Your Email">
+							<button class="subscribe__button" type="submit">Subscribe</button>
+						</form>
+					</div>
+				</div>
+			</div>
+
 		</main>
 
 		<footer class="footer">
