add getintouch block

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
 			<section class="page__advantages advantages">
 				<div class="advantages__container _container">
-					<div class="advantages__title-block title-block">
-						<h2 class="title-block__title">Designing Better Experience</h2>
-						<p class="title-block__subtitle">Problems trying to resolve the conflict between the two major realms
+					<div class="advantages__header-block header-block">
+						<h2 class="header-block__title">Designing Better Experience</h2>
+						<p class="header-block__subtitle">Problems trying to resolve the conflict between the two major realms
 							<br> of Classical physics: Newtonian mechanics
 						</p>
 					</div>
@@ -158,9 +158,9 @@
 
 			<section class="page_practice practice">
 				<div class="practice__container _container">
-					<div class="practice__title-block title-block">
-						<h2 class="title-block__title">Practice Advice</h2>
-						<p class="title-block__subtitle">Problems trying to resolve the conflict between <br> the two major
+					<div class="practice__header-block header-block">
+						<h2 class="header-block__title">Practice Advice</h2>
+						<p class="header-block__subtitle">Problems trying to resolve the conflict between <br> the two major
 							realms of Classical physics: Newtonian mechanics
 						</p>
 					</div>
@@ -230,9 +230,9 @@
 
 			<section class="page__whoweare whoweare">
 				<div class="whoweare__container _container">
-					<div class="whoweare__title-block title-block">
-						<h2 class="title-block__title">Who We Are</h2>
-						<p class="title-block__subtitle">Problems trying to resolve the conflict between the two major realms
+					<div class="whoweare__header-block header-block">
+						<h2 class="header-block__title">Who We Are</h2>
+						<p class="header-block__subtitle">Problems trying to resolve the conflict between the two major realms
 							<br> of Classical physics: Newtonian mechanics
 						</p>
 					</div>
@@ -298,6 +298,55 @@
 					</div>
 				</div>
 			</div>
+
+			<section class="page__getintouch getintouch">
+				<div class="getintouch__container _container">
+					<div class="getintouch__header-block header-block">
+						<h2 class="header-block__title">Get In Touch</h2>
+						<p class="header-block__subtitle">Problems trying to resolve the conflict between<br> the two major
+							realms of Classical physics: Newtonian mechanics
+						</p>
+					</div>
+					<div class="getintouch__body">
+						<div class="getintouch__item">
+							<div class="getintouch__icon">
+								<img src="img/getintouch/Vector-0.svg" alt="">
+							</div>
+							<div class="getintouch__emails">
+								<a href="mailto:georgia.young@example.com"
+									class="getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<p class="getintouch__title">Get Support</p>
+							<a href="" class="getintouch__button">Submit Request</a>
+						</div>
+						<div class="getintouch__item">
+							<div class="getintouch__icon">
+								<img src="img/getintouch/Vector-1.svg" alt="">
+							</div>
+							<div class="getintouch__emails">
+								<a href="mailto:georgia.young@example.com"
+									class="getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<p class="getintouch__title">Get Support</p>
+							<a href="" class="getintouch__button">Submit Request</a>
+						</div>
+						<div class="getintouch__item">
+							<div class="getintouch__icon">
+								<img src="img/getintouch/Vector-2.svg" alt="">
+							</div>
+							<div class="getintouch__emails">
+								<a href="mailto:georgia.young@example.com"
+									class="getintouch__email">georgia.young@example.com</a>
+								<a href="mailto:georgia.young@ple.com" class="getintouch__email">georgia.young@ple.com</a>
+							</div>
+							<p class="getintouch__title">Get Support</p>
+							<a href="" class="getintouch__button">Submit Request</a>
+						</div>
+					</div>
+				</div>
+			</section>
 
 		</main>
 
