--- a/index.html
+++ b/index.html
@@ -366,6 +366,15 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__contact contact">
+				<div class="contact__container _container">
+					<div class="contact__content">
+						<h3 class="contact__title">Consulting Agency For Your Business</h3>
+						<p class="contact__text">the quick fox jumps over the lazy dog</p>
+					</div>
+					<a href="" class="contact__button">Contact Us</a>
+				</div>
+			</section>
 
 		</main>
 
