--- a/index.html
+++ b/index.html
@@ -379,8 +379,125 @@
 		</main>
 
 		<footer class="footer">
-			<div class="footer__container _container">
-				Подвал
+			<div class="footer__top">
+				<div class="footer__container _container">
+					<div class="footer__row">
+						<div class="footer__column">
+							<div class="footer__label">Company Info</div>
+							<div class="footer__menu menu-footer">
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">About Us</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Carrier</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">We are hiring</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Blog</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="footer__column">
+							<div class="footer__label">Legal</div>
+							<div class="footer__menu menu-footer">
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">About Us</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Carrier</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">We are hiring</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Blog</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="footer__column">
+							<div class="footer__label">Features</div>
+							<div class="footer__menu menu-footer">
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Business Marketing</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">User Analytic</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Live Chat</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Unlimited Support</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="footer__column">
+							<div class="footer__label">Resources</div>
+							<div class="footer__menu menu-footer">
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">IOS & Android</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Watch a Demo</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">Customers</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link">API</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="footer__column">
+							<div class="footer__label">Get In Touch</div>
+							<div class="footer__menu menu-footer">
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item">
+										<a href="tel:4805550103" class="menu-footer__link menu-footer__link_phone">(480)
+											555-0103</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="" class="menu-footer__link menu-footer__link_adress">4517 Washington Ave.
+											Manchester, Kentucky 39495</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="mailto:debra.holt@example.com"
+											class="menu-footer__link menu-footer__link_email">debra.holt@example.com</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer__bottom">
+				<div class="footer__container _container">
+					<p class="footer__copy">Made With Love By Figmaland All Right Reserved </p>
+					<div class="footer__social social">
+						<a href="" class="social__item">
+							<img src="img/social/Vector-0.svg" alt="facebook">
+						</a>
+						<a href="" class="social__item">
+							<img src="img/social/Vector-1.svg" alt="instagram">
+						</a>
+						<a href="" class="social__item">
+							<img src="img/social/Vector-2.svg" alt="twitter">
+						</a>
+						<a href="" class="social__item">
+							<img src="img/social/Vector-3.svg" alt="youtube">
+						</a>
+					</div>
+				</div>
 			</div>
 		</footer>
 	</div>
